// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeOutline should return a code structure for a valid js file 1`] = `
Array [
  Object {
    "ctor": "ImportsStructureTreeItem",
    "label": "Imports",
  },
  Object {
    "ctor": "DeclarationStructureTreeItem",
    "label": "Yay",
  },
]
`;

exports[`CodeOutline should return a code structure for a valid ts file 1`] = `
Array [
  Object {
    "ctor": "ImportsStructureTreeItem",
    "label": "Imports",
  },
  Object {
    "ctor": "DeclarationStructureTreeItem",
    "label": "Yay",
  },
  Object {
    "ctor": "DeclarationStructureTreeItem",
    "label": "ArrList<T>",
  },
]
`;

exports[`CodeOutline should return an empty array if no document is open 1`] = `Array []`;

exports[`CodeOutline should return disabled structure item when it is disabled 1`] = `
Array [
  Object {
    "ctor": "DisabledStructureTreeItem",
    "label": "Feature is disabled.",
  },
]
`;

exports[`CodeOutline should return not parseable on non ts / js file 1`] = `
Array [
  Object {
    "ctor": "NotParseableStructureTreeItem",
    "label": "File not parseable.",
  },
]
`;
